--- a/code/MC/Practica_Lex/salida.tex
+++ b/code/MC/Practica_Lex/salida.tex
@@ -9,13 +9,17 @@
 \begin{document}
 
 
-
+\section{Esto es un título}
+\subsection{Esto es un subtítulo}
+\subsubsection{Esto es un subsubtítulo}
 
 Aquí comienza un texto que puede contener palabras en \textbf{negrita}, en \textit{cursiva} y \underline{subrayadas}. 
 Puede contener también \href{https://ejemplo.com"}{enlaces}.
-Además se pueden empezar párrafos como el siguiente:
+Además, se pueden empezar párrafos como el siguiente:
 
 Esto es un párrafo de un documento HTML que termina con un salto de línea.\\
+
+Se pueden ver también imágenes como la siguiente:\\
 
 
 \includegraphics[width=300px, height=200px]{image.png}
