--- a/code/MC/Practica_Lex/memoria/memoria.tex
+++ b/code/MC/Practica_Lex/memoria/memoria.tex
@@ -27,6 +27,9 @@ El objetivo principal de esta práctica es la de resolver una traducción simple
 En esta implementación, para no complicar demasiado la traducción no se han tenido en cuenta el uso de estilos ni de bloques de código (ya que estos no serían implementables).
 
 \section{Estructuras}
+
+Para el desarrollo de este punto se ha usado la herramienta de \href{https://regex-vis.com/}{Regex Vis} para la creación de los diagramas.\\
+
 Las principales estructuras de HTML que se han procesado con el programa realizado han sido los siguientes:
 
 \subsection{Bold/Black}
